Format speed also on initialization

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         // Set default base
         track.prop("base", base);
         // Set default speed
-        track.prop("speed", speed);
+        track.prop("speed", speed.toFixed(2));
         // Set default map
         track.prop("map", map);
         // Set default instrument
