Hide number display overflow to work with mobile

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
           }
           .number-display {
             font-family: 'Inconsolata monospace';
+            overflow: hidden;
             width: 250px;
             background-color: black;
             font-size: 32px;
