--- a/index.html
+++ b/index.html
@@ -23,151 +23,14 @@
         <![endif]-->
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Inconsolata">
 
+        <link href="css/style.css" rel="stylesheet">
+
         <title>Numbers Music!</title>
         <link rel="shortcut icon" href="favicon.ico" />
         <script src="js/timbre.js"></script>
         <script src="numbers-sound.js"></script>
 
-        <style>
-          html {
-            margin: 10px 20px 10px 20px;
-          }
-          .glyphicon:hover {
-            color: #46c6e2;
-          }
-          .glyphicon-play {
-            font-size: 32px;
-          }
-          .glyphicon-share {
-            font-size: 24px;
-          }
-          .glyphicon-trash {
-            font-size: 24px;
-            margin-left: 20px;
-            margin-left: 10px;
-          }
-          .glyphicon-trash:hover {
-            color: #F87A54;
-          }
-          .glyphicon-stop {
-            font-size: 32px;
-          }
-	      .glyphicon-music {
-            font-size: 32px;
-          }
-          .glyphicon-chevron-up {
-            font-size: 10px;
-          }
-          .glyphicon-chevron-down {
-            font-size: 10px;
-          }
-      	  .spinner {
-      	    width: 75px;
-      	  }
-      	  .spinner input {
-      	    text-align: right;
-      	  }
-      	  .input-group-btn-vertical {
-      	    position: relative;
-      	    white-space: nowrap;
-      	    width: 1%;
-      	    vertical-align: middle;
-      	    display: table-cell;
-      	  }
-      	  .input-group-btn-vertical > .btn {
-      	    display: block;
-      	    float: none;
-      	    width: 100%;
-      	    max-width: 100%;
-      	    padding: 8px;
-      	    margin-left: 0px;
-      	    position: relative;
-      	    border-radius: 0;
-      	  }
-      	  .input-group-btn-vertical > .btn:first-child {
-      	    border-top-right-radius: 4px;
-      	  }
-      	  .input-group-btn-vertical > .btn:last-child {
-      	    margin-top: -2px;
-      	    border-bottom-right-radius: 4px;
-      	  }
-      	  .input-group-btn-vertical span{
-      	    position: absolute;
-      	    top: 0;
-      	    left: 4px;
-      	  }
-          .track {
-            position: relative;
-            margin: 0px 50px 10px 0px;
-            padding: 5px;
-            border-color: #e5e5e5 #eee #eee;
-            border-style: solid;
-            border-width: 1px 1px 1px 1px;
-            -webkit-box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
-            box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
-            display:inline-block;
-          }
-          .number-display {
-            font-family: 'Inconsolata monospace';
-            overflow: hidden;
-            width: 250px;
-            background-color: black;
-            font-size: 32px;
-            color: #dddddd;
-          }
-          .highlight {
-            color: #46c6e2;
-            white-space: pre;
-          }
-          .before {
-            padding-left: 5px;
-            white-space: pre;
-          }
-          .after {
-            white-space: pre;
-          }
-          #number {
-            width: 75px;
-          }
-          .btn-large {
-            margin: 0px 10px 10px 0px;
-          }
-          .piano {
-            display:inline-block;
-            position: relative;
-          }
-          .white-key {
-            position: absolute;
-            float: left;
-            border-left-style: solid;
-            border-top-style: solid;
-            border-bottom-style: solid;
-          }
-          .white-key:hover {
-            background-color: #46c6e2;
-          }
-          .black-key:hover {
-            background-color: #46c6e2;
-          }
-          .black-key {
-            position: absolute;
-            background-color: black;
-            float: left;
-            border-style: solid;
-          }
-          .modal-body {
-            display:inline-block;
-          }
-          #message {
-            margin-top: 10px;
-          }
-          #number-modal textarea{
-            width:100%;
-          }
-          .notes-mapping {
-              color: gray;
-          }
-        </style>
+
     </head>
 
     <body>
